[package]
name = "mpv"
version = "0.2.4"
authors = ["Cobrand <cobrandw@gmail.com>","yamakaky"]
description = "unsafe rust bindings for libmpv edited"
homepage = "https://github.com/Cobrand/mpv-rs"
repository = "https://github.com/Cobrand/mpv-rs"
documentation = "https://docs.rs/mpv/"

keywords = ["mpv", "video","player","media","binding"]
license = "MIT/Apache-2.0"

[dependencies]
log = "0.4.17"
enum_primitive = "0.1.1"
num = "0.4.0"

[dev-dependencies]
sdl2 = "0.35.2"
sdl2-sys = "0.35.2"
